--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,14 @@
 
 /* Common css */
 body{
-   margin: 0;
+   margin: 0 auto;
 }
 
 
 /* Start the navigation section */
 header{
    background-color: #562EFF;
+   margin-bottom: 30px;
 }
 
  nav{
@@ -24,17 +25,28 @@ header{
 }
 
 
-.icons h3{
-   color: white;
-   font-weight: 400;
-   font-size: large;
-}
-
-
 .icons img{
    height: 51px;
    width: 40.42px;
-   margin-top: 5px;
+  
+}
+
+ .common {
+   list-style: none;
+   margin-top: 10px;
+   
+}
+
+ .common a{
+   text-decoration: none;
+   color: white;
+   font-weight: 500;
+   font-size: large;  
+}
+
+ .common a:hover{
+   text-decoration: underline;
+   color: red; 
 }
 
 
@@ -43,17 +55,33 @@ header{
    gap: 20px;
 }
 
-.menu h4{
-   color: white;
-   font-weight: 400;
-   font-size: large;
-}
 
 
 .menu img{
    width: 51px;
    height: 51px;
-   margin-top: 7px; 
+  
 }
 
 /* End the navigation section */
+
+
+/* Start the players */
+
+.players-container{
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   margin-bottom: 50px;  
+}
+
+.player-details{
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+   margin-top: 20px;
+}
+
+.player-details img{
+   width: 56px;
+   height: 56px;
+}
