--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@ header{
 /* Start the players style*/
 main{
 display: flex;
+flex-direction: column;
 justify-content: center;
 }
 
@@ -85,6 +86,7 @@ justify-content: center;
    background-color: #FFFFFF;
    width: 870px;
    border-radius: 5px;
+   margin-bottom: 20px;
 }
 
 
@@ -139,7 +141,65 @@ justify-content: center;
 /* End of the Blog style*/
 
 
+
 /* Start the latest course style*/
+.courses{
+   background-color: #FFFFFF;
+   width: 870px;
+   border-radius: 5px;
+}
+
+
+.courses-container{
+   display: flex;
+   justify-content: space-around;
+}
+
+
+.course-title img{
+   width: 225px;
+   height: 104px;
+}
+
+
+.course-title p{
+   color: #ED6B4F;
+   font-size: 14px;
+}
+
+
+.rating-duration{
+   display: flex;
+   align-items: center;
+   column-gap: 30px;
+}
+
+
+.rating-container img{
+   height: 15px;
+   width: 15px;
+}
+
+
+.rating-container span{
+   margin-left: 10px; 
+}
+
+
+
+
+.duration-container{
+   display: flex;
+   align-items: center;
+   column-gap: 5px;  
+}
+
+
+.duration-container img{
+   height: 15px;
+   width: 15px;  
+}
+
 
 
 
