--- a/styles/style.css
+++ b/styles/style.css
@@ -13,17 +13,13 @@ body{
    color: #562EFF;
    margin-left: 40px;
 }
-
-
 /* End the common style */
-
-
 
 
 /* Start the navigation section */
 header{
    background-color: #562EFF;
-   margin-bottom: 50px;
+   margin-bottom: 30px;
 }
 
  nav{
@@ -77,10 +73,9 @@ header{
 /* Start the players style*/
 main{
 display: flex;
-flex-direction: column;
 justify-content: center;
+flex-wrap: wrap;
 }
-
 
 .top-container{
    background-color: #FFFFFF;
@@ -89,13 +84,11 @@ justify-content: center;
    margin-bottom: 20px;
 }
 
-
 .players-container{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    row-gap: 30px;
 }
-
 
 .player-info{
    display: flex;
@@ -103,7 +96,6 @@ justify-content: center;
    column-gap: 20px;
    margin-left: 40px; 
 }
-
 
 .player-info img{
    width: 56px;
@@ -120,19 +112,16 @@ justify-content: center;
    row-gap: 30px;
 }
 
-
 .blog-info{
    display: flex;
    column-gap: 20px;
    margin-left: 40px;
 }
 
-
 .blog-info img{
    width: 177px;
    height: 117px;
 }
-
 
 .done-by{
    color: #562EFF;
@@ -147,26 +136,24 @@ justify-content: center;
    background-color: #FFFFFF;
    width: 870px;
    border-radius: 5px;
+   padding-bottom: 50px;
 }
-
 
 .courses-container{
    display: flex;
-   justify-content: space-around;
+   column-gap: 20px;
+   margin-left: 40px;
 }
-
 
 .course-title img{
    width: 225px;
    height: 104px;
 }
 
-
 .course-title p{
    color: #ED6B4F;
    font-size: 14px;
 }
-
 
 .rating-duration{
    display: flex;
@@ -174,19 +161,14 @@ justify-content: center;
    column-gap: 30px;
 }
 
-
 .rating-container img{
    height: 15px;
    width: 15px;
 }
 
-
 .rating-container span{
    margin-left: 10px; 
 }
-
-
-
 
 .duration-container{
    display: flex;
@@ -194,28 +176,7 @@ justify-content: center;
    column-gap: 5px;  
 }
 
-
 .duration-container img{
    height: 15px;
    width: 15px;  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.hide{
-   /* display: none; */
 }
